--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.23.3",
+    "framer-motion": "^12.23.5",
     "html-to-pdf-js": "^0.9.3",
     "html2pdf.js": "^0.10.3",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
