--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "html2pdf.js": "^0.10.3",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.5",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
